--- a/front/.prettierrc.json
+++ b/front/.prettierrc.json
@@ -2,5 +2,6 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "singleQuote": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "printWidth": 100
 }
