--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/vladesco/game-online#readme",
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/mysql": "^2.15.8",
-    "@types/node": "^13.7.1",
+    "@types/node": "^13.13.0",
     "prettier": "^2.0.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
@@ -27,6 +28,9 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "mysql": "^2.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "socket.io": "^2.3.0"
   }
 }
