--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,27 +1,19 @@
 {
-  "compilerOptions": {
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "target": "es6",
-      "noImplicitAny": false,
-      "moduleResolution": "node",
-      "sourceMap": false,
-      "outDir": "dist",
-      "baseUrl": ".",
-      "paths": {
-          "*": [
-              "node_modules/*",
-              "src/types/*"
-          ]
-      },
-      "typeRoots": [
-        "node_modules/koa-bodyparser",
-        "node_modules/@types"
-      ]
-  },
-  "include": [
-      "src/**/*", "src/index.ts"
-  ],
-  "exclude": ["node_modules"]
+    "compilerOptions": {
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "target": "es6",
+        "noImplicitAny": false,
+        "moduleResolution": "node",
+        "sourceMap": false,
+        "outDir": "dist",
+        "baseUrl": ".",
+        "paths": {
+            "*": ["node_modules/*", "src/types/*"]
+        },
+        "typeRoots": ["node_modules/@types"]
+    },
+    "include": ["src/**/*", "src/index.ts"],
+    "exclude": ["node_modules"]
 }
