--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "webpack-dev-server": "^3.10.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
@@ -17,12 +16,13 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^6.0.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
